--- a/tweet_image_new/src/App.scss
+++ b/tweet_image_new/src/App.scss
@@ -1,28 +1,136 @@
 .App {
   text-align: center;
-}
 
-.navbar {
-  width: 100%;
-  height: 15vh;
-  background-color: rgba(0, 0, 0, 0.8);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .navbar {
+    width: 100%;
+    height: 15vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-input {
-  padding: 0 20px;
-  box-sizing: border-box;
-  font-size: 18px;
-  width: 80%;
-  height: 5vh;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-}
-button {
-  padding: 10px 20px;
-  background-color: white;
-  color: black;
+    input {
+      padding: 0 20px;
+      box-sizing: border-box;
+      font-size: 18px;
+      width: 80%;
+      height: 5vh;
+      border: none;
+      outline: none;
+      border-radius: 10px;
+    }
+    button {
+      padding: 0px;
+      height: 5vh;
+      width: auto;
+      background-color: white;
+      color: black;
+      font-size: 50px;
+      margin-left: 10px;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+  }
+
+  .container {
+    background-color: rgb(64, 74, 87);
+    margin: none;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    padding: 50px;
+    max-width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .card {
+      box-shadow: 0px 0px 15px 5px #302f2f;
+      background-color: white;
+      border-radius: 15px;
+      // width: calc(100% - 100px);
+      width: auto;
+      max-width: 450px;
+      height: auto;
+      z-index: 99;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+
+      .head {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        position: relative;
+
+        .left {
+          #dp {
+            border-radius: 50%;
+          }
+        }
+
+        .right {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: center;
+          margin-left: 10px;
+          text-align: left;
+
+          .name {
+            font-weight: 600;
+            font-size: 20px;
+            text-align: inherit;
+          }
+
+          .uname {
+            font-weight: 300;
+            font-size: 16px;
+            color: grey;
+            text-align: inherit;
+          }
+        }
+
+        #logo {
+          position: absolute;
+          right: 0px;
+          top: 0px;
+          width: 40px;
+          height: auto;
+        }
+      }
+
+      .body {
+        width: 100%;
+        margin-top: 15px;
+        display: flex;
+        font-size: 18px;
+        text-align: left;
+        line-height: 150%;
+      }
+    }
+  }
+
+  #dwnld {
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: 30px;
+    outline: none;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    background-color: #302f2f;
+    font-size: 18px;
+    cursor: pointer;
+  }
 }
