--- a/tweet_image_new/src/App.scss
+++ b/tweet_image_new/src/App.scss
@@ -1,27 +1,35 @@
 .App {
   text-align: center;
+  position: relative;
+  height: 100vh;
 
   .navbar {
     width: 100%;
-    height: 15vh;
-    background-color: rgba(0, 0, 0, 0.8);
+    height: 120px;
+    background-color: rgb(0, 162, 255);
     display: flex;
     align-items: center;
     justify-content: center;
+    // margin-bottom: 100px;
 
     input {
       padding: 0 20px;
       box-sizing: border-box;
       font-size: 18px;
       width: 80%;
-      height: 5vh;
+      height: 50px;
       border: none;
       outline: none;
       border-radius: 10px;
+      // box-shadow: 0px 0px 5px 0px #000;
+
+      &::selection {
+        background-color: rgba(19, 163, 230, 0.4);
+      }
     }
     button {
       padding: 0px;
-      height: 5vh;
+      height: 50px;
       width: auto;
       background-color: white;
       color: black;
@@ -32,105 +40,134 @@
       align-items: center;
       justify-content: center;
       cursor: pointer;
+      outline: none;
+      border: none;
+      // box-shadow: 0px 0px 5px 0px #000;
     }
   }
 
-  .container {
-    background-color: rgb(64, 74, 87);
-    margin: none;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
-    padding: 50px;
-    max-width: 600px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .container-dup {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
 
-    .card {
-      box-shadow: 0px 0px 15px 5px #302f2f;
-      background-color: white;
-      border-radius: 15px;
-      // width: calc(100% - 100px);
+    .container {
+      background-image: linear-gradient(
+        45deg,
+        rgb(166, 212, 233),
+        // rgb(63, 154, 196),
+        rgb(0, 162, 255)
+      );
+      position: relative;
+      // left: 50%;
+      // top: 50%;
+      // transform: translateX(-50%) translateY(-50%);
+      margin: 0px;
+      margin-bottom: 0px;
       width: auto;
-      max-width: 450px;
       height: auto;
-      z-index: 99;
+      box-sizing: border-box;
+      padding: 50px;
+      max-width: 600px;
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      // align-items: center;
       justify-content: center;
-      padding: 20px;
 
-      .head {
-        width: 100%;
+      .card {
+        box-shadow: 0px 0px 15px 0px #302f2f;
+        background-color: white;
+        border-radius: 15px;
+        // width: calc(100% - 100px);
+        width: auto;
+        max-width: 450px;
+        height: auto;
+        z-index: 99;
         display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
+        flex-direction: column;
         align-items: center;
-        position: relative;
+        justify-content: center;
+        padding: 20px;
 
-        .left {
-          #dp {
-            border-radius: 50%;
-          }
-        }
-
-        .right {
+        .head {
+          width: 100%;
           display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          justify-content: center;
-          margin-left: 10px;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: center;
+          position: relative;
+
+          .left {
+            #dp {
+              border-radius: 50%;
+            }
+          }
+
+          .right {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            margin-left: 10px;
+            text-align: left;
+
+            .name {
+              font-weight: 600;
+              font-size: 20px;
+              text-align: inherit;
+            }
+
+            .uname {
+              font-weight: 300;
+              font-size: 16px;
+              color: grey;
+              text-align: inherit;
+            }
+          }
+
+          #logo {
+            position: absolute;
+            right: 0px;
+            top: 0px;
+            width: 40px;
+            height: auto;
+          }
+        }
+
+        .body {
+          width: 100%;
+          margin-top: 15px;
+          display: flex;
+          font-size: 18px;
           text-align: left;
-
-          .name {
-            font-weight: 600;
-            font-size: 20px;
-            text-align: inherit;
-          }
-
-          .uname {
-            font-weight: 300;
-            font-size: 16px;
-            color: grey;
-            text-align: inherit;
-          }
+          line-height: 150%;
         }
-
-        #logo {
-          position: absolute;
-          right: 0px;
-          top: 0px;
-          width: 40px;
-          height: auto;
-        }
-      }
-
-      .body {
-        width: 100%;
-        margin-top: 15px;
-        display: flex;
-        font-size: 18px;
-        text-align: left;
-        line-height: 150%;
       }
     }
   }
 
   #dwnld {
-    margin: 20px;
+    margin: 30px auto;
     display: flex;
     justify-content: center;
     align-items: center;
     width: auto;
-    height: 30px;
+    height: 50px;
     outline: none;
     border: none;
+    border-radius: 10px;
     color: white;
     padding: 10px 20px;
     background-color: #302f2f;
     font-size: 18px;
     cursor: pointer;
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: translateX(-50%) translateY(-50%);
+
+    @media (max-width: 400px) {
+      top: 80%;
+    }
   }
 }
